--- a/python-server_side_rendering/templates/product_display.html
+++ b/python-server_side_rendering/templates/product_display.html
@@ -9,14 +9,16 @@
 	{% if error %}
 		<p>{{ error }}</p>
 	{% else %}
-		<table border="1">
+		<table>
 			<tr>
+				<th>ID</th>
 				<th>Name</th>
 				<th>Category</th>
 				<th>Price</th>
 			</tr>
 			{% for product in products %}
 				<tr>
+					<td>{{ product.id }}</td>
 					<td>{{ product.name }}</td>
 					<td>{{ product.category }}</td>
 					<td>{{ product.price }}</td>
